# humane-intelligence

./: .gitignore  HUMANE_INTELLIGENCE_GPT.md  LICENSE  README.md  contribution.py  core.py  http_app.py  humane.config.example.json  openapi.json  pyproject.toml  server.json  server.py  test.py
.github/: FUNDING.yml
